# gitlab-api-exporter

./: .env  Cargo.toml  README.md
src/: get_project_details.graphql  gitlab_schema.graphql  main.rs
